--- a/src/main/resources/templates/upload.html
+++ b/src/main/resources/templates/upload.html
@@ -11,7 +11,8 @@
 <body>
     <h1>文件上传页面</h1>
     <form method="post" action="/upload" enctype="multipart/form-data">
-        选择要上传的文件: <input type="file" name="file" /><br>
+        文件1: <input type="file" name="files" /><br>
+        文件2: <input type="file" name="files" /><br>
         <hr>
         <input type="submit" value="提交" />
     </form>
